@@ -1,5 +1,12 @@
 1.3-21
 
+* minor bug in gam.fit() - edf array not passed to `mgcv.find.theta'
+  if method "perf.magic" used - so wrong EDF used for theta estimation 
+  with neagative binomial. fixed. 
+
+* Theta estimate added to family object of fitted gam if negative binomial 
+  used...
+
 * extract.lme.cov(2) modified to allow use with single level grouping 
   factors (not really sure when this is useful)
 
